# riley-raster

./: .gitignore  GEMINI.md  MANIFEST.in  README.md  bench_eieo_basic.md  bench_eo.md  bench_monointerp.md  bench_old.md  bench_runtimeinterp.md  bench_src.md  bench_src_optimized.md  build.zig  build.zig.zon  check_winding.py  getTessellatedGuess.txt  hull_plan.md  hybrid_perf.txt  interleaved_perf.txt  perf_plan_cx.md  perf_terms.md  planar_opt_perf.txt  pyproject.toml  refactor.md  setup.py  simd_best.md  simd_design.md  simd_newton_perf.md  simd_newton_plan.md  simd_plan.md  simd_plan2.md  simd_unification_plan.md  temp_test.zig  test_output.txt  texture_mem_plam.md  tri_simd_perf.md  wide_perf.txt
abstract/: tile_one_field0_frame8.ppm
data/: gen_fill_elems.py  save_sim_to_csv.py
data-bench/: gen_bench_data.py
data-edge/: gen_data_rot.py  gen_distort_midside_data.py  gen_stress_data.py  gen_vertbulge_data.py
data-simple/: gen_data_all.py  gen_data_fullscreen.py  gen_data_singleelem.py  gen_data_twoelems.py  gen_uvs_fullscreen.py  gen_uvs_singleelem.py  gen_uvs_twoelems.py  proj_uvs.py  vis_uvs_fullscreen.py  vis_uvs_twoelems.py
data-small/: gen_data_all.py  gen_data_fullscreen.py  gen_data_singleelem.py  gen_uvs_fullscreen.py  gen_uvs_singleelem.py  gendata.py  proj_uvs.py  vis_uvs_fullscreen.py  vis_uvs_singleelem.py
dev/: ABBREVIATIONS.md  FILESTRUCTURE.md  PERFORMANCE.md  README.md  ZIGSTYLEGUIDE.md  spec_procedural_speckles.md
examples-simd/: simdpxraster.zig  simdpxraster2.zig  simdraster.zig
gemini/: rasterTilesLinTriV0.zig  tileraster.zig
notes/: rev_noted.md
perf/: LLVMPIPE_BENCH_INSTRUCTIONS.md  PERFHARDWARE.md  RAM_breakdown.md  bench_fullraster_simd_v2.md  bench_geom_simd_v1.md  bench_llvmpipe.c  bench_sphere2000_simd_v1.md  bench_sphere2000_simd_v2.md  compare_to_llvmpipe.py  compare_v5_to_v3_2.md  llvmpipe_comparison_results.csv  memory_setup_investigation.md  old_perf_plan_threaded_v1.md  old_software_rasteriser_scaling_experiments.md  paper_benchmark_overview.md  perf_plan_cx.md  perf_plan_cx2.md  (+33 more)
(+2255 files in other folders)
