[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "numpy", "ziglang"]
build-backend = "setuptools.build_meta"

[project]
name = "riley-raster"
version = "2026.5.0"
description = "A python->Zig CPU rasteriser."
authors = [
  { name = "scepticalrabbit (Lloyd Fletcher)", email = "thescepticalrabbit@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
  "numpy>=2.0.0",
  "Pillow>=10.0.0",
]

[project.urls]
"Repository" = "https://github.com/Computer-Aided-Validation-Laboratory/riley-raster"

[tool.setuptools.packages.find]
where = ["src"]
